[package]
name = "allvu"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "AllVu_Client"
path = "src/client/main.rs"

[[bin]]
name = "AllVu_Server"
path = "src/server/main.rs"

[dependencies]
anyhow = "1.0.97"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
text_io = "0.1.13"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
